fix all size on tablet and desktop for Chrome

--- a/css/activity.css
+++ b/css/activity.css
@@ -4,6 +4,7 @@
   width: 100%;
   padding: 30px;
   box-sizing: border-box;
+  margin: 35px 0px;
 }
 
 .card-global-activite {
