--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@ header img {
 
 .header-nav {
   display: flex;
-  gap: 2em;
+  gap: 68px;
 }
 
 .header-div:hover {
