--- a/css/hebergements.css
+++ b/css/hebergements.css
@@ -46,7 +46,7 @@ box-sizing: border-box;
 .card-hebergement {
 background-color: white;
 border-radius: 20px;
-padding: 5px;
+padding: 5px 5px 0px 5px;
 filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
 
@@ -65,15 +65,19 @@ border-top-left-radius: 20px;
 .card-hebergement-title {
 font-weight: 700;
 font-size: 16px;
-margin-top: 4px;
-margin-bottom: 4px;
+margin-top: 9px;
+margin-bottom: 8px;
 }
 
 .card-hebergement-subtitle {
 font-weight: 400;
 font-size: 14px;
-margin-top: 8px;
-margin-bottom: 4px;
+margin: 0;
+margin-bottom: 8px;
+}
+
+.card-ratings {
+  padding-bottom: 15px;
 }
 
 /****** Populaires ***********/
@@ -119,4 +123,10 @@ margin-bottom: 4px;
 
 .populaires-cards .card-rating {
   margin-bottom: 5px;
+}
+
+.more-title {
+  margin: 0;
+  font-size: 22px;
+  padding-bottom: 2.5px;
 }
