--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ footer {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 15px;
 }
 
 .footer-title {
